# ahn_cli

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  TODO_20260713.md  TODO_OPTIMAL_TILES3D.md  _typos.toml  makefile  plan_improved.md  pyproject.toml
.github/workflows/: bevy_ahnp_ortho.yml  ci.yml  rust.yml
ahn_cli/: __init__.py  config.py  kwargs.py  main.py  process.py  validator.py
ahn_cli/cache/: __init__.py  key.py  store.py
ahn_cli/cli/: __init__.py  app.py
ahn_cli/copc/: __init__.py  build.py  dedup.py  octree.py  scatter.py  writer.py
ahn_cli/domain/: __init__.py  authenticity.py  generation.py  grid.py  product.py  progress.py  provenance.py  tile.py  vintage.py
ahn_cli/fetch/: __init__.py  acquisition.py  dsm.py  generation.py  geotiles_source.py  ortho.py  pdok.py  source.py  viirs.py
ahn_cli/fetcher/: __init__.py  geotiles.py  municipality.py  request.py
ahn_cli/manipulator/: __init__.py  geojson.py  preview.py  ptc_handler.py  rasterizer.py  transformer.py  verifier.py
ahn_cli/pipeline/: __init__.py  assemble.py  errors.py  executor.py  machine.py  manifest.py  model.py  planners.py  run.py  sources.py  spec.py  tiling.py  wiring.py
ahn_cli/prep/: __init__.py  decimate.py  dedup.py  dedup_stream.py  ply.py  positions.py  spill.py  transform.py  voxel_stream.py
ahn_cli/provenance/: __init__.py  sidecar.py
ahn_cli/reconcile/: __init__.py  backend.py  clean.py  interpolate.py  method.py  mlx_backend.py  neighbors.py  raster.py  reconcile.py  writers.py
ahn_cli/tiles3d/: __init__.py  build.py  emit.py  encoders.py  errors.py  exr.py  geodesy.py  gltf.py  gltf_quant.py  heightfield.py  jpeg.py  manifest.py  mesh.py  meshopt.py  pack.py  parallel.py  payload.py  png.py  profile.py  provenance.py  quadtree.py  quantize.py  sources.py  splat.py  tileset.py  verify.py  verify_game.py  verify_heightfield.py  verify_splat.py
assets/: moerkapelle_greenhouses.geojson
docs/: bevy-integration.md  overview.md
docs/bugs/: 2026-07-11-pdal-copc-xyz-bounds-flat-terrain.md  pdal-copc-xyz-bounds-flat-terrain.md
docs/changelogs/: 2026-07-13-evening.md  2026-07-13-tiles3d-profiles-renderer.md  tiles3d-profiles-renderer.md
docs/specs/: 2026-07-12-heightfield-chunk-format.md  2026-07-12-hfp-pack-format.md  copc-design.md  dedup-spill-design.md  heightfield-chunk-format.md  hfp-pack-format.md  pipeline-design.md  tiles3d-design.md  voxel-spill-design.md
rust/: Cargo.toml  deny.toml
rust/ahn-heightfield/: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
rust/ahn-heightfield/examples/: decode_to_pgm.rs  dump_header.rs  list_archive.rs
rust/ahn-heightfield/fuzz/: .gitignore  Cargo.toml
rust/ahn-heightfield/fuzz/corpus/archive_open/: tiles-bad-magic.hfp  tiles-truncated.hfp
rust/ahn-heightfield/fuzz/corpus/decode/: leaf-bad-magic.hf  leaf-truncated.hf
rust/ahn-heightfield/fuzz/fuzz_targets/: archive_open.rs  decode.rs
rust/ahn-heightfield/src/: archive.rs  chunk.rs  encode.rs  error.rs  lib.rs
rust/ahn-heightfield/tests/: archive_golden.rs  archive_reject.rs  archive_semantics.rs  conformance_vectors.rs  encode_roundtrip.rs  golden_decode.rs  reject_chunks.rs
rust/ahn-heightfield/tests/common/: mod.rs
rust/ahn-heightfield/tests/data/: leaf.hf
rust/bevy_ahnp_ortho/: Cargo.toml  LICENSE-MIT  NOTICE  README.md  build.rs  deny.toml
rust/bevy_ahnp_ortho/examples/: demo.rs  viewer.rs  viewer_points.rs  viewer_splat.rs
rust/bevy_ahnp_ortho/examples/helpers/: orbit.rs
rust/bevy_ahnp_ortho/src/: errors.rs  frame.rs  lib.rs
rust/bevy_ahnp_ortho/src/ahnp/: glb.rs  loader.rs  mod.rs  source.rs
rust/bevy_ahnp_ortho/src/engine/: geo.rs  geodesy.rs  meshopt.rs  mod.rs  tree.rs
rust/bevy_ahnp_ortho/src/points/: mod.rs
rust/bevy_ahnp_ortho/src/render/: gpu_texture.rs  material.rs  mesh_glb.rs  mesh_hf.rs  mesh_points.rs  mod.rs
rust/bevy_ahnp_ortho/src/splat/: mod.rs
rust/bevy_ahnp_ortho/tests/data/: game_tile.glb  points.copc.laz  splat_pack.hfp
rust/spike-poc/: Cargo.toml  README.md
rust/spike-poc/src/: lib.rs
rust/spike-poc/tests/: chunk_codec.rs  hashes.rs  pack.rs  platform.rs
rust/spike-poc/tests/common/: mod.rs
rust/spike-poc/tests/data/: chunk_v2.hf  chunk_v2_giant.hf  game.hfp  golden.json  heightfield.hfp  sort_vectors.json
rust/spike-poc/tools/: gen_vectors.py  pack_poc.py
tests/: test_bounded_contexts.py  test_coverage_gate.py  test_extra_bytes_harmonization.py  test_geojson_integration.py  test_integration_vertical_slice.py  test_rasterize.py  test_validator.py
tests/cache/: test_key.py  test_store.py
tests/cli/: test_app.py  test_pipeline_cli.py
tests/copc/: __init__.py  conftest.py  test_build.py  test_copc_cli.py  test_dedup.py  test_octree_plan.py  test_octree_sampler.py  test_scatter.py  test_writer.py
tests/domain/: test_authenticity.py  test_generation.py  test_grid.py  test_product.py  test_provenance.py  test_tile.py  test_vintage.py
tests/fetch/: test_acquisition.py  test_dsm.py  test_generation.py  test_geotiles_source.py  test_ortho.py  test_pdok.py  test_source.py  test_tile_enumeration_property.py  test_viirs.py
tests/fetcher/: test_geotiles.py  test_municipality.py
tests/manipulator/: test_transformer.py  test_verifier.py
tests/nightly/: test_portal_contract.py
tests/pipeline/: __init__.py  harness.py  scenes.py  test_assemble.py  test_errors.py  test_executor.py  test_harness.py  test_machine.py  test_manifest.py  test_model.py  test_planners.py  test_run.py  test_sources.py  test_spec.py  test_tiling.py  test_wiring.py
tests/prep/: test_decimate.py  test_decimate_mlx_equivalence.py  test_dedup.py  test_dedup_stream.py  test_ply.py  test_positions.py  test_spill.py  test_transform.py  test_voxel_stream.py
tests/provenance/: test_sidecar.py
tests/reconcile/: __init__.py  conftest.py  test_amsterdam_integration.py  test_clean.py  test_interpolate.py  test_method.py  test_mlx_backend.py  test_neighbors.py  test_raster.py  test_reconcile.py  test_reconcile_cli.py  test_reconcile_mlx_equivalence.py  (+1 more)
(+93 files in other folders)
