[project]
name = "ahn_cli"
version = "0.3.5"
description = "AHN CLI for downloading Dutch elevation point cloud data"
authors = [{ name = "HideBa", email = "baba.papa1120.ba@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "click>=8.2.0",
    "geopandas>=1.1.0",
    "shapely>=2.1.0",
    "laspy[lazrs]>=2.6.0",
    "requests>=2.32.0",
    "rasterio>=1.4.0",
    "tqdm>=4.67.0",
    "polyscope>=2.4.0",
    "typing-extensions>=4.14.1",
]

[project.optional-dependencies]
pdal = ["pdal>=2.5.0"]

[project.scripts]
ahn_cli = "ahn_cli.main:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["ahn_cli/**/*.py", "ahn_cli/**/*.geojson", "README.md", "LICENSE"]

# Ruff configuration
[tool.ruff]
line-length = 78
target-version = "py310"

[tool.ruff.lint]
# Enable flake8-style linting plus additional rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings  
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by line-length)
]

[tool.ruff.lint.isort]
known-first-party = ["ahn_cli"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# Coverage configuration
[tool.coverage.run]
branch = true
source = ["ahn_cli"]
# Legacy modules predate the 7rad §10 data-acquisition epic and are exempt
# from the 100% gate. RULE: when a work package substantively rewrites a
# legacy file, that same WP removes it from this list and brings the file to
# 100% branch coverage. New packages the epic adds (domain/, cli/, fetch/,
# prep/, provenance/, cache/, ...) are intentionally absent here, so they are
# gated at 100% the moment they land.
omit = [
    "ahn_cli/main.py",
    "ahn_cli/process.py",
    "ahn_cli/config.py",
    "ahn_cli/kwargs.py",
    "ahn_cli/validator.py",
    "ahn_cli/fetcher/*",
    "ahn_cli/manipulator/*",
]

[tool.coverage.report]
fail_under = 100
show_missing = true

# Pyright configuration
[tool.pyright]
include = ["ahn_cli", "tests"]
# Grandfather the SAME legacy set exempted from the coverage gate, plus the
# legacy test files that carry pre-existing type issues. RULE (identical to
# coverage's omit): when a work package substantively rewrites a legacy file,
# that WP removes it from this exclude list and makes it pyright-clean. New
# epic code and any new tests must be pyright-clean.
exclude = [
    "ahn_cli/main.py",
    "ahn_cli/process.py",
    "ahn_cli/config.py",
    "ahn_cli/kwargs.py",
    "ahn_cli/validator.py",
    "ahn_cli/fetcher/**",
    "ahn_cli/manipulator/**",
    "tests/manipulator/test_transformer.py",
    "tests/manipulator/test_verifier.py",
    "tests/test_extra_bytes_harmonization.py",
    "tests/test_geojson_integration.py",
    "tests/test_rasterize.py",
]

[dependency-groups]
dev = [
    "hypothesis>=6.156.4",
    "pyright>=1.1.411",
    "pytest>=8.4.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.12.5",
    "typos>=1.34.0",
    "vcrpy>=8.3.0",
]
