[project]
name = "ahn_cli"
version = "0.3.5"
description = "AHN CLI for downloading Dutch elevation point cloud data"
authors = [{ name = "HideBa", email = "baba.papa1120.ba@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "click>=8.2.0",
    "defusedxml>=0.7.1",
    "geopandas>=1.1.0",
    "shapely>=2.1.0",
    "laspy[lazrs]>=2.6.0",
    "requests>=2.32.0",
    "rasterio>=1.4.0",
    "tqdm>=4.67.0",
    "polyscope>=2.4.0",
    "typing-extensions>=4.14.1",
    "scipy>=1.11",
    "copclib>=2.6.3",
    "pyproj>=3.7",
    "pillow>=12.3.0",
    "meshoptimizer==0.2.30a0",
]

[project.optional-dependencies]
pdal = ["pdal>=2.5.0"]
# Optional Apple-silicon GPU accelerator for graded decimation (WP11). Declared
# as an extra (NOT a default/dev dependency) AND environment-marked to
# arm64 macOS, so a plain ``uv sync --dev`` on the Linux CI runners never
# attempts to install it. Install locally with ``uv sync --extra mlx``. The
# decimation code imports ``mlx`` lazily and falls back to the numpy backend
# when it is absent, so the package is fully functional without this extra.
mlx = ["mlx>=0.32.0; sys_platform == 'darwin' and platform_machine == 'arm64'"]

[project.scripts]
ahn_cli = "ahn_cli.cli:cli"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["ahn_cli/**/*.py", "ahn_cli/**/*.geojson", "README.md", "LICENSE"]

# Ruff configuration
[tool.ruff]
line-length = 78
target-version = "py310"
# ``typings/`` holds vendored third-party type stubs for the untyped ``laspy``
# API (see typings/laspy/__init__.pyi). Stubs for a dynamic C-backed library
# inherently need ``Any`` signatures and mirror the library's own ``open`` name,
# which strict first-party rules (ANN401, A001) reject; they are typing
# infrastructure, not first-party source, so they are not linted. This is NOT a
# coverage-omit or pyright-exclude of any shipped module. ``force-exclude`` makes
# the exclusion hold even when pre-commit passes stub paths explicitly.
extend-exclude = ["typings"]
force-exclude = true

[tool.ruff.lint]
# Strictest: enable every rule, then subtract only rules that conflict with the
# formatter, the mutually-exclusive docstring-convention pairs, and line length
# (owned by the formatter). Docstrings (D) and annotations (ANN) stay ON.
select = ["ALL"]
ignore = [
    "E501",   # line length is enforced by the formatter (line-length = 78)
    "COM812", # trailing comma: conflicts with the formatter
    "COM819", # prohibited trailing comma: conflicts with the formatter
    "ISC001", # single-line implicit str concat: conflicts with the formatter
    "ISC002", # multi-line implicit str concat: conflicts with the formatter
    "Q000",   # inline quote style: owned by the formatter
    "Q001",   # multiline quote style: owned by the formatter
    "Q002",   # docstring quote style: owned by the formatter
    "Q003",   # avoidable escaped quote: owned by the formatter
    "D206",   # docstring indentation: owned by the formatter
    "D300",   # triple-quote style: owned by the formatter
    "E111",   # indentation multiple: owned by the formatter
    "E114",   # indentation multiple (comment): owned by the formatter
    "E117",   # over-indentation: owned by the formatter
    "W191",   # tab indentation: owned by the formatter
    "D203",   # incompatible with D211; keep D211 (no blank line before class)
    "D213",   # incompatible with D212; keep D212 (summary on first line)
]

[tool.ruff.lint.isort]
known-first-party = ["ahn_cli"]

[tool.ruff.lint.pylint]
# Click subcommands bind one function parameter per CLI option, so a command
# with many flags legitimately exceeds the default 5-argument limit. The
# `fetch` verb carries out/city/bbox/geojson/ahn/source plus the WP7 --dsm and
# WP8 --ortho flags, and the `prep` verb carries data + two class filters + four
# thinning options (WP11) -- the larger of the two sets the bound. This raises
# ONLY the argument-count threshold; every other lint rule stays at full
# strictness (ruff select=ALL, pyright strict). It is NOT a per-file-ignore,
# coverage-omit, or pyright-exclude, and no plain (non-Click-entrypoint)
# function reaches it.
max-args = 8

[tool.ruff.lint.per-file-ignores]
# KEEP IN SYNC with [tool.coverage.run] omit and [tool.pyright] exclude.
# GOVERNANCE: a legacy MODULE may be grandfathered ONLY IF it is marked
# deprecated -- a top-of-file `DEPRECATED; ANY LOGIC USED IN THIS CODE SHOULD
# BE MOVED` comment AND a module-level DeprecationWarning. Legacy TEST files
# are grandfathered as-is (the rule targets shipped modules, not tests).
# De-grandfathering a file (a WP rewriting it) removes it from ALL THREE lists
# and requires it to pass strict ruff ALL + strict pyright + 100% branch cov.
"ahn_cli/main.py" = ["ALL"]
"ahn_cli/process.py" = ["ALL"]
"ahn_cli/config.py" = ["ALL"]
"ahn_cli/kwargs.py" = ["ALL"]
"ahn_cli/validator.py" = ["ALL"]
"ahn_cli/fetcher/**" = ["ALL"]
"ahn_cli/manipulator/**" = ["ALL"]
"tests/fetcher/test_geotiles.py" = ["ALL"]
"tests/fetcher/test_municipality.py" = ["ALL"]
"tests/manipulator/test_transformer.py" = ["ALL"]
"tests/manipulator/test_verifier.py" = ["ALL"]
"tests/test_extra_bytes_harmonization.py" = ["ALL"]
"tests/test_geojson_integration.py" = ["ALL"]
"tests/test_pipeline.py" = ["ALL"]
"tests/test_rasterize.py" = ["ALL"]
"tests/test_validator.py" = ["ALL"]
# Allowances every test file legitimately needs under ALL; new tests must
# otherwise pass strict. Each is justified:
"tests/**" = [
    "S101",    # asserts are how pytest tests assert
    "PLR2004", # comparing against literal expected values is normal in tests
    "S603",    # tests shell out to trusted subprocesses (sys.executable)
    "INP001",  # pytest test dirs are intentionally not import packages
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# Pytest configuration
[tool.pytest.ini_options]
# The fast default suite is fully mocked/offline and 100%-covered. Live
# portal-contract checks are marked ``nightly`` and DESELECTED here, so a plain
# ``pytest`` (and ``make test``) never touches the network; the nightly CI tier
# opts back in with ``pytest -m nightly`` (``make test-nightly``). The nightly
# tests exercise only code the fast suite already covers, so excluding them keeps
# the 100% gate intact without omitting any shipped module.
markers = [
    "nightly: live portal-contract checks against the real PDOK / Beeldmateriaal endpoints; excluded from the fast offline suite, run on the nightly CI schedule.",
]
addopts = "-m 'not nightly'"

# Coverage configuration
[tool.coverage.run]
branch = true
source = ["ahn_cli"]
# Legacy modules predate the 7rad §10 data-acquisition epic and are exempt
# from the 100% gate. KEEP IN SYNC with [tool.ruff.lint.per-file-ignores] and
# [tool.pyright] exclude. GOVERNANCE: a module may be grandfathered ONLY IF it
# is marked deprecated (top-of-file `DEPRECATED; ANY LOGIC USED IN THIS CODE
# SHOULD BE MOVED` comment + a module-level DeprecationWarning). De-grandfathering
# a file (a WP rewriting it) removes it from ALL THREE lists and requires it to
# pass strict ruff ALL + strict pyright + 100% branch coverage. (Coverage
# measures only ahn_cli, so the legacy *test* files in the other two lists have
# no entry here.) New packages the epic adds (domain/, cli/, fetch/, prep/,
# provenance/, cache/, ...) are intentionally absent, so they are gated on land.
omit = [
    "ahn_cli/main.py",
    "ahn_cli/process.py",
    "ahn_cli/config.py",
    "ahn_cli/kwargs.py",
    "ahn_cli/validator.py",
    "ahn_cli/fetcher/*",
    "ahn_cli/manipulator/*",
]

[tool.coverage.report]
fail_under = 100
show_missing = true

# Pyright configuration
[tool.pyright]
typeCheckingMode = "strict"
# venvPath/venv point pyright at the uv-managed .venv so BOTH the pyright
# pre-commit mirror (which runs in its own isolated env) and CI's
# `uv run pyright` resolve third-party imports (laspy, geopandas, ...)
# identically.
venvPath = "."
venv = ".venv"
include = ["ahn_cli", "tests"]
# Grandfather the SAME legacy set as coverage `omit` + ruff per-file-ignores,
# plus the legacy test files. KEEP IN SYNC with those two lists. GOVERNANCE: a
# legacy MODULE may be grandfathered ONLY IF it is marked deprecated (top-of-file
# `DEPRECATED; ANY LOGIC USED IN THIS CODE SHOULD BE MOVED` + a module-level
# DeprecationWarning); legacy TEST files are grandfathered as-is. De-grandfathering
# a file (a WP rewriting it) removes it from ALL THREE lists and requires it to
# pass strict ruff ALL + strict pyright + 100% branch coverage.
exclude = [
    "ahn_cli/main.py",
    "ahn_cli/process.py",
    "ahn_cli/config.py",
    "ahn_cli/kwargs.py",
    "ahn_cli/validator.py",
    "ahn_cli/fetcher/**",
    "ahn_cli/manipulator/**",
    "tests/fetcher/test_geotiles.py",
    "tests/fetcher/test_municipality.py",
    "tests/manipulator/test_transformer.py",
    "tests/manipulator/test_verifier.py",
    "tests/test_extra_bytes_harmonization.py",
    "tests/test_geojson_integration.py",
    "tests/test_pipeline.py",
    "tests/test_rasterize.py",
    "tests/test_validator.py",
]

[dependency-groups]
dev = [
    "hypothesis>=6.156.4",
    "pre-commit>=4.6.0",
    "pyright>=1.1.411",
    "pytest>=8.4.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.12.5",
    "typos>=1.34.0",
    "vcrpy>=8.3.0",
]
