[package]
name = "ahn-heightfield"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
description = "Decoder for the AHN heightfield (.hf) chunk and AHNP pack formats"
license = "MIT OR Apache-2.0"
repository = "https://github.com/abossenbroek/ahn_cli"
readme = "README.md"
keywords = ["heightfield", "terrain", "zstd", "3d-tiles", "geospatial"]
categories = ["encoding", "science::geo", "game-development"]

[dependencies]
# Vendored libzstd via zstd-sys (MSVC-clean); decode_all verifies the RFC 8878
# content checksum and the embedded content size.
zstd = "0.13"
# CRC-32/ISO-HDLC, bit-identical to Python's zlib.crc32.
crc32fast = "1.4"
thiserror = "2"

[dev-dependencies]
# Only the SHA-256 algorithm-conformance test needs this in Phase 4a; the
# archive layer's blob verification (Task 4b) promotes it to a real dependency.
sha2 = "0.10"

[package.metadata.docs.rs]
all-features = true
