# THROWAWAY spike crate (hf-v2 Task 1b). NOT the shippable `ahn-heightfield`
# crate — this exists only to falsify/rule out the v2 interop doubts across
# {ubuntu, macos, windows} in CI. It is deleted/superseded in Phase 4.
[package]
name = "ahn-hf-spike"
version = "0.0.0"
edition = "2021"
publish = false
description = "Throwaway interop spike for the hf-v2 exchange format (Task 1b)."

[dependencies]
zstd = "0.13"          # vendored libzstd via zstd-sys (MSVC-clean); no ruzstd
crc32fast = "1.4"      # CRC-32 ISO-HDLC, must match Python zlib.crc32
sha2 = "0.10"          # SHA-256, must match Python hashlib.sha256
memmap2 = "0.9"        # mmap'd-fixture decode path
serde_json = "1"       # read the committed golden.json vectors

# Keep this crate out of any accidental parent workspace.
[workspace]
