[package]
name = "ahn-heightfield-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.ahn-heightfield]
path = ".."

# Isolate the fuzz crate into its own workspace so it never joins the parent
# `rust/` workspace's build/test gates. Fuzzing needs a nightly toolchain to
# *run* (`cargo fuzz build`/`run`); on stable the crate `cargo check`s cleanly.
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "decode"
path = "fuzz_targets/decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "archive_open"
path = "fuzz_targets/archive_open.rs"
test = false
doc = false
bench = false
